# hbctool

./: .gitignore  ADD_NEW_VERSION.md  LICENSE  README.md  hasm.py  hbctool.py  metadata.py  pyproject.toml  requirements.txt  test.py  util.py
hbc/: __init__.py
hbc/hbc74/: __init__.py  parser.py  test.py  translator.py
hbc/hbc74/data/: structure.json
hbctool/: __init__.py  hasm.py  metadata.py  test.py
hbctool/hbc/: __init__.py
hbctool/hbc/hbc59/: __init__.py  parser.py  test.py
hbctool/hbc/hbc59/data/: opcode.json
hbctool/hbc/hbc59/example/: index.android.bundle
hbctool/hbc/hbc59/raw/: BytecodeFileFormat.h  BytecodeList.def  SerializedLiteralGenerator.h
hbctool/hbc/hbc62/: __init__.py  test.py
hbctool/hbc/hbc62/data/: opcode.json
hbctool/hbc/hbc62/example/: index.android.bundle
hbctool/hbc/hbc74/: parser.py  test.py  translator.py
hbctool/hbc/hbc74/data/: opcode.json
hbctool/hbc/hbc74/example/: index.android.bundle
hbctool/hbc/hbc74/tool/: opcode_generator.py
hbctool/hbc/hbc76/: __init__.py  test.py
hbctool/hbc/hbc76/example/: index.android.bundle
hbctool/hbc/hbc83/: __init__.py
hbctool/hbc/hbc83/data/: opcode.json
hbctool/hbc/hbc83/raw/: BytecodeFileFormat.h  BytecodeList.def  SerializedLiteralGenerator.h
hbctool/hbc/hbc84/: __init__.py  parser.py
hbctool/hbc/hbc84/data/: opcode.json  structure.json
hbctool/hbc/hbc84/raw/: BytecodeFileFormat.h  BytecodeList.def  SerializedLiteralGenerator.h
hbctool/hbc/hbc85/: __init__.py  translator.py
hbctool/hbc/hbc89/: __init__.py
hbctool/hbc/hbc90/: __init__.py  parser.py
(+6 files in other folders)
